[package]
name = "replikate"
version = "0.1.0"
authors = ["rloic <loic.rouquette@insa-lyon.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahorse = "0.7.0"
yaml-rust = "0.4.3"
wait-timeout = "0.2.0"
chrono = "0.4.11"